# plot-misc

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .setup_git_hooks.py  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  _setup_git_hooks.py  _version.py  contributors.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.githooks/: .codespell-ignore-words.txt  .codespellrc  .setup_git_hooks.py  commit-msg  commit-spell.sh  pre-commit
docs/source/: api.rst  conf.py  contributing.rst  design_philosophy.rst  examples.rst  index.rst  raising_issues.rst
plot_misc/: __init__.py  barchart.py  clustering.py  colour.py  constants.py  errors.py  forest.py  heatmap.py  incidencematrix.py  machine_learning.py  piechart.py  pychart.py  pyrightconfig.json  survival.py  utils.py  volcano.py
plot_misc/example_data/: examples.py
plot_misc/table/: layout.py
plot_misc/utils/: colour.py  formatting.py  utils.py
resources/ci_cd/: README.md  before_script.sh  debug_run_docker.sh  pages.sh  run_docker.sh  run_pages.sh  run_tests.sh  test.sh
resources/conda_env/: conda_create.yml  conda_update.yml
resources/examples/: barchart.ipynb  forestplot.ipynb  heatmap.ipynb  incidence_matrix.ipynb  machine_learning.ipynb  publication_ready.ipynb  pychart.ipynb  survival.ipynb  tldr.ipynb  utils.ipynb  volcanoplot.ipynb
tests/: .test_module.py  conftest.py  test_barchart.py  test_constant.py  test_errors.py  test_forest.py  test_heatmap.py  test_incidencematrix.py  test_machine_learning.py  test_piechart.py  test_pychart.py  test_survival.py  test_utils.py  test_volcano.py
tests/table/: test_layout.py
tests/utils/: test_colour.py  test_formatting.py  test_utils.py
(+45 files in other folders)
