[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot_misc"
version = "1.1.0"
description = "Various plotting templates built on top of matplotlib"
readme = "README.md"
authors = [{ name = "A Floriaan Schmidt", email = "amand.schmidt@ucl.ac.uk" }]
license = { text = "GPLv3+" }
requires-python = ">=3.12.0"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "adjustText"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.optional-dependencies]
dev = ["twine", "build"]

[project.urls]
Homepage = "https://gitlab.com/SchmidtAF/plot-misc"

[tool.setuptools.packages.find]
include = ["plot_misc*"]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"plot_misc" = ["*.md", "*.txt", "*.rst"]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*"]

# [tool.setuptools.classifiers]
# values = [
#     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.12",
#     "Programming Language :: Python :: Implementation :: PyPy"
# ]

[tool.pytest.ini_options]
markers = [
    "datafiles: load datafiles"
]
testpaths = ["tests"]
